--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,30 @@
 * {
     --test-border: 3px solid #eb4034;
-    border: var(--test-border);
+    
 }
 
 body {
     display: flex;
     height: 100vh;
+    background-color: #e3e5f0;
+}
+
+.content-left {
+    border: var(--test-border);
+}
+
+.content-right {
+    top: 25%;
+    position: relative;
+}
+
+.intro {
+    font-size: 17px;
+    font-weight: 800;
+}
+
+form .form-card {
+    background-color: #ffffff;
 }
 
 form .form-inputs {
