--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,40 @@ body {
    position: relative;
 }
 
-img {
+.background-img {
     height: 100%;
+}
+
+.logo-container {
+    background-color: rgb(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    top: 25%;
+    display: flex;
+    justify-content: center;
+}
+
+.logo-pair {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 0 5px 0;
+}
+
+.logo-img {
+    height: 60%;
+}
+
+@font-face {
+    font-family: misproject;
+    src: url(/fonts/Misproject/Truetype/MISPROJECT.TTF);
+}
+
+.logo-text {
+    font-family: misproject, sans-serif;
+    color: #ffffff;
+    margin-left: 10px;
+    font-size: 100px;
 }
 
 .photo-credit {
