add phone number validation

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px 0 5px 0;
 }
 
 .logo-img {
@@ -65,7 +64,7 @@ body {
     color: #ffffff;
 }
 
-p {
+.intro, .log-in {
     margin-left: 30px;
 }
 
@@ -79,6 +78,7 @@ form .form-card {
     background-color: #ffffff;
     padding: 10px 0px 20px 30px;
     margin-top: 40px;
+    box-shadow: 3px 3px 5px #cac9c9;
 }
 
 form .form-inputs {
@@ -94,6 +94,8 @@ form .input-pair {
 
 input {
     width: 200px;
+    border-radius: 5px;
+    border: 1px solid #ccced2;
 }
 
 button {
@@ -107,3 +109,14 @@ button {
 .log-in {
     font-size: 15px;
 }
+
+/* Pseudo styles */
+ input[type="password"]:invalid, input[type="tel"]:invalid {
+    border: 1px solid #ff0000;
+ }
+
+
+ input:focus {
+    border: 1px solid #193ef7;
+    box-shadow: 3px 3px 5px #cac9c9;
+ }
