--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body {
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100vh;
     background-color: #e3e5f0;
 }
@@ -36,7 +37,7 @@ body {
 }
 
 .logo-img {
-    height: 60%;
+    height: 85%;
 }
 
 @font-face {
@@ -47,8 +48,8 @@ body {
 .logo-text {
     font-family: misproject, sans-serif;
     color: #ffffff;
-    margin-left: 10px;
     font-size: 100px;
+    line-height: 1;
 }
 
 .photo-credit {
@@ -64,6 +65,10 @@ body {
     color: #ffffff;
 }
 
+.content-right {
+    flex: 1;
+}
+
 .intro, .log-in {
     margin-left: 30px;
 }
@@ -72,6 +77,8 @@ body {
     font-size: 17px;
     font-weight: 650;
     margin-bottom: 20px;
+    margin-right: 30px;
+    max-width: 65ch;
 }
 
 form .form-card {
@@ -111,6 +118,8 @@ button {
 }
 
 /* Pseudo styles */
+ 
+
  input[type="password"]:invalid, input[type="tel"]:invalid {
     border: 1px solid #ff0000;
  }
